manifests/lewi/deployment.patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hydros
spec:
  template:
    spec:
      containers:
        - name: hydros
