manifests/lewi/service.patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: hydros
  annotations:
    cloud.google.com/neg: '{"exposed_ports":{"8080":{}}}'
