manifests/lewi/gateway.yaml
# Add an HTTPRoute to connect the loadbalancer to the istio-ingressgateway
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: hydros-webook
spec:
  parentRefs:
    - kind: Gateway
      name: platform
  hostnames:
    - "platform.roboweb.app"
  rules:
    - matches:
      - path:
          type: Prefix
          value: "/hydros"
      backendRefs:
        - name: hydros
          port: 8080

# ---
#
# apiVersion: gateway.networking.k8s.io/v1beta1
# kind: HTTPRoute
# metadata:
#   name: roboweb
# spec:
#   parentRefs:
#   - name: roboweb
#   hostnames:
#   - "playground.roboweb.app"
#   rules:
#   - matches:
#     - path:
#         value: /
#     backendRefs:
#     - name: gateway
#       port: 8080
